Fixed the gap between the header and location name

--- a/Assets/css/main-content.css
+++ b/Assets/css/main-content.css
@@ -1,5 +1,5 @@
 #locationName {
-  /* margin-top: 0.7rem; */
+  margin-top: 0.7rem;
   display: flex;
   justify-content: center;
   align-items: center;
